[package]
name = "twitch_recover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
rust-crypto = "0.2.36"
chrono = "0.4.22"
rand = "^0.8.5"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.21", features = ["full"] }
futures-util = "0.3.14"
regex = "1.5.6"
