[package]
name = "twitch_recover"
version = "0.2.1"
edition = "2021"
authors = ["Mageas <dev@mageas.net>"]
description = "Recover a twitch vod"
documentation = "https://docs.rs/twitch_recover"
keywords = ["twitch"]
license = "GPL-3.0"
repository = "https://gitea.heartnerds.org/Mageas/twitch_recover"

[dependencies]
thiserror = "1.0.37"
rust-crypto = "0.2.36"
chrono = "0.4.22"
rand = "^0.8.5"
regex = "1.5.6"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.21", features = ["macros"] }
